syntax = "proto3";

package shooters.user.v1;

import "google/type/phone_number.proto";

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string username = 5;
  string role = 6;
  google.type.PhoneNumber phone_number = 7;
  bool is_approved = 9;
  bool email_verified = 10;
  string country_code = 11;
  bool phone_number_verified = 12;
}

message UserAttribute {
  string key = 1;
  string value = 2;
}

service UserService {
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {}
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  optional User user = 1;
}

message ListUsersRequest {
  string role = 1;
}

message ListUsersResponse {
  repeated User users = 1;
}

message CreateUserRequest {
  UserRequest user = 1;
}

message CreateUserResponse {
  optional User user = 1;
}

message UserRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string username = 4;
  google.type.PhoneNumber phone_number = 5;
  string role = 6;
  string country = 7;
}
